Update mobile navigation styles to ensure visibility on smaller screens

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -73,7 +73,7 @@
   }
   
   @media (max-width: $breakpoint-md) {
-    display: none;
+    display: block !important;
   }
 }
 
